# sensex_nexus

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
scripts/: generate_report.py  requirements.txt  setup.bat
src/: lib.rs  main.rs  quicknote.md
src/client/: README.md  mod.rs
src/features/: README.md  mod.rs
src/features/agents/: handlers.rs  models.rs  routes.rs
src/features/auth/: handlers.rs  mod.rs  models.rs  routes.rs
src/features/ciscat/: handlers.rs  models.rs  routes.rs
src/features/decoders/: handlers.rs  models.rs  routes.rs
src/features/groups/: handlers.rs  models.rs  routes.rs
src/features/lists/: handlers.rs  models.rs  routes.rs
src/features/manager/: handlers.rs  models.rs  routes.rs
src/features/mitre/: handlers.rs  models.rs  routes.rs
src/features/rootcheck/: handlers.rs  models.rs  routes.rs
src/features/rules/: handlers.rs  mod.rs  models.rs  routes.rs
src/features/sca/: handlers.rs  models.rs  routes.rs
src/features/security/: handlers.rs  models.rs  routes.rs
src/features/tasks/: handlers.rs  (+2 more)
src/handlers/: README.md  agents.rs  auth.rs  ciscat.rs  decoders.rs  groups.rs  lists.rs  manager.rs  mitre.rs  mod.rs  rootcheck.rs  rules.rs  sca.rs  security.rs  syscheck.rs  syscollector.rs  tasks.rs  wql.rs
src/routes/: README.md  agents.rs  auth.rs  ciscat.rs  decoders.rs  groups.rs  lists.rs  manager.rs  mitre.rs  mod.rs  rootcheck.rs  rules.rs  sca.rs  security.rs  syscheck.rs  syscollector.rs  tasks.rs  wql.rs
src/shared/: common.rs
src/tests/: README.md  agent_specific_tests.rs  agents_tests.rs  auth_tests.rs  decoders_tests.rs  groups_list_tests.rs  groups_tests.rs  groups_with_agents_tests.rs  lists_tests.rs  manager_tests.rs  mitre_tests.rs  mod.rs  rag_query_tests.rs  rules_tests.rs  security_tests.rs  syscollector_tests.rs  tasks_tests.rs
wql_queries/: alerts.json
wql_templates/: alerts_daily.json  alerts_monthly.json  alerts_weekly.json
(+22 files in other folders)
