[package]
name = "sensex_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
reqwest = { version = "0.11.20", features = ["json"] }
tower-http = { version = "0.4.4", features = ["cors"] }
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
tower = "0.4.13"
chrono = "0.4.38"
serde_derive = "1.0.213"
qdrant-client = "1.8.0"
uuid = { version = "1.7.0", features = ["v4"] }
dotenv = "0.15.0"
langchain-rust = "4.6.0"
lazy_static = "1.5.0"
chacha20poly1305 = "0.10.1"
rand = "0.8.5"
base64 = "0.21.7"
x25519-dalek = "2.0.1"
hkdf = "0.12.4"
sha2 = "0.10.8"
flate2 = "1.0.28"
native-tls = "0.2.11"
tokio-native-tls = "0.3.1"
governor = "0.6.0"
nonzero_ext = "0.3.0"
rcgen = "0.12.1"
headless_chrome = "1.0.5"

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
tower = "0.4.13"
tempfile = "3.10.1"
